--- a/app/src/main/res/layout/reminder_row.xml
+++ b/app/src/main/res/layout/reminder_row.xml
@@ -1,29 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="120dp">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="50dp"
+    android:orientation="horizontal"
+    android:gravity="center"
+    android:background="@color/cardview_shadow_start_color"
+    android:paddingBottom="5dp">
+
 
 
     <TextView
         android:id="@+id/reminder_name"
-        android:textColor="@android:color/white"
-        android:shadowColor="@android:color/black"
+        android:textColor="@android:color/black"
         android:shadowRadius="10"
         android:layout_width="wrap_content"
         android:layout_above="@+id/reminder_place"
         android:paddingLeft="8dp"
         android:paddingBottom="4dp"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal" />
 
     <TextView
         android:id="@+id/reminder_place"
-        android:textColor="@android:color/white"
-        android:shadowColor="@android:color/black"
+        android:textColor="@android:color/black"
         android:shadowRadius="10"
         android:layout_alignParentBottom="true"
         android:layout_width="wrap_content"
         android:paddingLeft="8dp"
         android:paddingBottom="4dp"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal" />
 
-</RelativeLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/Pion"
+        android:visibility="invisible"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/Poziom"
+        android:visibility="invisible"/>
+
+</LinearLayout>
