--- a/app/src/main/res/layout/reminder_row.xml
+++ b/app/src/main/res/layout/reminder_row.xml
@@ -2,10 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="50dp"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:gravity="center"
     android:background="@color/cardview_shadow_start_color"
-    android:paddingBottom="5dp">
+    android:paddingBottom="5dp"
+    android:id="@+id/subtext">
 
 
 
@@ -18,7 +19,8 @@
         android:paddingLeft="8dp"
         android:paddingBottom="4dp"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/reminder_place"
@@ -30,17 +32,5 @@
         android:paddingBottom="4dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/Pion"
-        android:visibility="invisible"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/Poziom"
-        android:visibility="invisible"/>
 
 </LinearLayout>
